modified:   DEBIAN/DEBIAN_monitor/control 	deleted:    DEBIAN/DEBIAN_monitor/postinst 	deleted:    DEBIAN/DEBIAN_monitor/postrm 	deleted:    DEBIAN/DEBIAN_monitor/prerm 	deleted:    DEBIAN/DEBIAN_tui/postinst 	deleted:    DEBIAN/DEBIAN_tui/postrm 	deleted:    DEBIAN/DEBIAN_tui/prerm 	modified:   makedeb.sh

--- a/DEBIAN/DEBIAN_monitor/control
+++ b/DEBIAN/DEBIAN_monitor/control
@@ -3,5 +3,5 @@ Version: 0.1
 Section: utils
 Priority: optional
 Architecture: all
-Maintainer: tearran <your.email@example.com>
+Maintainer: tearran <tearran@...l.com>
 Description: Armbian Monitor - Tools to configer and cusomize your installation (contrib)
