--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -11,8 +11,8 @@ jobs:
         uses: actions/checkout@v2
       - name: Create README file
         run: |
-          # Create a README file in the main/doc/ directory within the repository
-          echo "Hello World" > main/doc/README.md
+          # Create a README file in the main doc/ directory within the repository
+          echo "Hello World" > doc/README.md
       - name: Commit and push changes
         run: |
           git config --global user.name 'GitHub Actions'
