--- a/share/armbian-configng/data/armbian-configng.json
+++ b/share/armbian-configng/data/armbian-configng.json
@@ -1,58 +1,26 @@
 [
   {
-    "Function Name": "nmtui",
-    "Group Name": "network",
-    "Description": "Set a local net test.",
-    "Options": "none",
-    "Category": "Network",
-    "Category Description": "Network Wired wireless Bluetooth access point"
-  },
-  {
-    "Function Name": "Hello",
-    "Group Name": "locale",
-    "Description": "Hello World.",
-    "Options": "none",
-    "Category": "Locale",
-    "Category Description": "Personal, Timezone, language, and hostname"
-  },
-  {
     "Function Name": "Hello",
     "Group Name": "system",
     "Description": "Hello System.",
-    "Options": "",
+    "Options": "none",
     "Category": "System",
     "Category Description": "System and Security"
-  },
-  {
-    "Function Name": "setup",
-    "Group Name": "chroot",
-    "Description": "WIP: Setup a non destructive Test enviroment.",
-    "Options": "none.",
-    "Category": "Misc",
-    "Category Description": "Catch all for miscellaneous scripts"
-  },
-  {
-    "Function Name": "Branding",
-    "Group Name": "setup",
-    "Description": "Banding With Softlinks .",
-    "Options": "none",
-    "Category": "Misc",
-    "Category Description": "Catch all for miscellaneous scripts"
-  },
-  {
-    "Function Name": "Hello",
-    "Group Name": "misc",
-    "Description": "Hello World.",
-    "Options": "none.",
-    "Category": "Misc",
-    "Category Description": "Catch all for miscellaneous scripts"
   },
   {
     "Function Name": "Bencharking",
     "Group Name": "monitor",
     "Description": "Armbian Monitor and Bencharking.",
+    "Options": "",
+    "Category": "System",
+    "Category Description": "System and Security"
+  },
+  {
+    "Function Name": "NMTUI",
+    "Group Name": "network",
+    "Description": "Network Manager.",
     "Options": "none.",
-    "Category": "Software",
-    "Category Description": "System and 3rd party software install"
+    "Category": "Network",
+    "Category Description": "Network Wired wireless Bluetooth access point"
   }
 ]
