--- a/.github/workflows/all_docs.yml
+++ b/.github/workflows/all_docs.yml
@@ -10,13 +10,15 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - name: Checkout
-                uses: actions/checkout@v2
+              uses: actions/checkout@v2
 
             - name: Build
-                run: ./bin/armbian-config --doc
+              run: |
+                chmod +x ./bin/armbian-config
+                ./bin/armbian-config --doc
 
             - name: Deploy
-                uses: peaceiris/actions-gh-pages@v3
-                with:
-                    github_token: ${{ secrets.GITHUB_TOKEN }}
-                    publish_dir: ./configng/share
+              uses: peaceiris/actions-gh-pages@v3
+              with:
+                  github_token: ${{ secrets.GITHUB_TOKEN }}
+                  publish_dir: ./configng/share
