Fix typo in armbian-config command

--- a/.github/workflows/all_docs.yml
+++ b/.github/workflows/all_docs.yml
@@ -14,8 +14,8 @@ jobs:
 
             - name: Build
               run: |
-                chmod +x ./bin/armbian-config
-                ./bin/armbian-config --doc
+                chmod +x ./bin/armbian-configng
+                ./bin/armbian-configng --doc
 
             - name: Deploy
               uses: peaceiris/actions-gh-pages@v3
