--- a/.github/workflows/all_docs.yml
+++ b/.github/workflows/all_docs.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v2.3.4
 
       - name: Build 🏗️
-        run: bash ./path_to_your_script.sh  # replace with your bash script path
+        run: bash ./bin/armbian-configng --dev --doc  # replace with your bash script path
 
       - name: Deploy 🚀
         uses: SamKirkland/FTP-Deploy-Action@4.0.0
