Fix server directory path in GitHub workflow

--- a/.github/workflows/all_docs.yml
+++ b/.github/workflows/all_docs.yml
@@ -21,4 +21,4 @@ jobs:
           server: ${{ secrets.SERVER_HOST}}  # replace with your server
           username: ${{ secrets.SERVER_USERNAME }}
           password: ${{ secrets.SERVER_PASSWORD }}
-          server-dir: /doc.armbian.tech # replace with your server directory
+          server-dir: /doc.armbian.tech/ # replace with your server directory
