--- a/.github/workflows/all_docs.yml
+++ b/.github/workflows/all_docs.yml
@@ -1,24 +1,17 @@
-name: Build and Deploy
-on:
-  push:
-    branches:
-      - main  # replace with your branch name
-
+on: push
+name: 🚀 Deploy website on push
 jobs:
-  build-and-deploy:
+  web-deploy:
+    name: 🎉 Deploy
     runs-on: ubuntu-latest
-    container:
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2.3.4
-
-      - name: Build
-        run: bash ./bin/armbian-configng --dev --doc  # replace with your bash script path
-
-      - name: Deploy
-        uses: SamKirkland/FTP-Deploy-Action@4.0.0
-        with:
-          server: ${{ secrets.SERVER_HOST}}  # replace with your server
-          username: ${{ secrets.SERVER_USERNAME }}
-          password: ${{ secrets.SERVER_PASSWORD }}
-          server-dir: /doc.armbian.tech/ # replace with your server directory
+    - name: 🚚 Get latest code
+      uses: actions/checkout@v3
+    
+    - name: 📂 Sync files
+      uses: SamKirkland/FTP-Deploy-Action@v4.3.4
+      with:
+        server: ${{ secrets.SERVER_HOST}}  # replace with your server
+        username: ${{ secrets.SERVER_USERNAME }}
+        password: ${{ secrets.SERVER_PASSWORD }}     
+        server-dir: /doc.armbian.tech # replace with your server directory
