--- a/.github/workflows/all_docs.yml
+++ b/.github/workflows/all_docs.yml
@@ -15,4 +15,4 @@ jobs:
         username: ${{ secrets.SERVER_USERNAME }}
         password: ${{ secrets.SERVER_PASSWORD }}     
         server-dir: / # replace with your server directory
-        local-dir: dist/share/
+        local-dir: share/
