--- a/.github/workflows/all_docs.yml
+++ b/.github/workflows/all_docs.yml
@@ -14,5 +14,5 @@ jobs:
         server: ${{ secrets.SERVER_HOST}}  # replace with your server
         username: ${{ secrets.SERVER_USERNAME }}
         password: ${{ secrets.SERVER_PASSWORD }}     
-        server-dir: / # replace with your server directory
-        local-dir: share/
+        server-dir: /dist # replace with your server directory
+        local-dir: share/armbian-configng/
