Adjust quick install guide since we are making a repository on the fly (#21)
* Update Quick start

After verifying if we put it into wanted folders and if it works, automation builds upon changes.

* Update README.md

* Update README.md

* Updated readme.md function to redirect to /share/doc/README.md

* Run doc gen

* RM  genterated documents folder

* bin/armbian-configng --dev --doc codespace

* deleted:    share/doc/armbian-configng/README.md

* Revert "Updated readme.md function to redirect to /share/doc/README.md"

This reverts commit db6f4f4034cf2d00361fe0ccdbe4c943b2e3e07d.

* modified:   debian.conf path

---------

Co-authored-by: Joey Turner <Tearran@users.noreply.github.com>

--- a/share/doc/armbian-configng/armbian-configng.json
+++ b/share/doc/armbian-configng/armbian-configng.json
@@ -22,5 +22,13 @@
     "Options": "",
     "Category": "system",
     "Category Description": "System and Security"
+  },
+  {
+    "Function Name": "Install",
+    "Group Name": "system",
+    "Description": "Armbian installer",
+    "Options": "none.",
+    "Category": "system",
+    "Category Description": "System and Security"
   }
 ]
