--- a/.github/workflows/debian.yml
+++ b/.github/workflows/debian.yml
@@ -1,29 +1,36 @@
-name: Debian package
-#
-# Description
-#
-
-on:
-  workflow_dispatch:
-  push:
-    branches:
-    - main
-
-jobs:
-
-  Debian:
-    uses: armbian/scripts/.github/workflows/pack-debian.yml@master
-    with:
-      matrix: "all:jammy"
-      maintainer: "Igor Pecovnik <igor@armbian.com>"
-      package: "configng"
-      licence: "GPL 2.0"
-      homepage: "https://www.armbian.com"
-      section: "default"
-      priority: "optional"
-      depends: "bash"
-      description: "Configng"
-
     secrets:
       GPG_PRIVATE_KEY: ${{ secrets.GPG_KEY1 }}
       PASSPHRASE: ${{ secrets.GPG_PASSPHRASE1 }}
+      SSH_KEY_TORRENTS: ${{ secrets.KEY_TORRENTS }}
+      KNOWN_HOSTS_UPLOAD: ${{ secrets.KNOWN_HOSTS_TORRENTS }}
+
+
+#name: Debian package
+##
+## Description
+##
+#
+#on:
+#  workflow_dispatch:
+#  push:
+#    branches:
+#    - main
+#
+#jobs:
+#
+#  Debian:
+#    uses: armbian/scripts/.github/workflows/pack-debian.yml@master
+#    with:
+#      matrix: "all:jammy"
+#      maintainer: "Igor Pecovnik <igor@armbian.com>"
+#      package: "configng"
+#      licence: "GPL 2.0"
+#      homepage: "https://www.armbian.com"
+#      section: "default"
+#      priority: "optional"
+#      depends: "bash"
+#      description: "Configng"
+#
+#    secrets:
+#      GPG_PRIVATE_KEY: ${{ secrets.GPG_KEY1 }}
+#      PASSPHRASE: ${{ secrets.GPG_PASSPHRASE1 }}
