--- a/.github/workflows/debian.yml
+++ b/.github/workflows/debian.yml
@@ -1,21 +1,16 @@
-    secrets:
-      GPG_PRIVATE_KEY: ${{ secrets.GPG_KEY1 }}
-      PASSPHRASE: ${{ secrets.GPG_PASSPHRASE1 }}
-      SSH_KEY_TORRENTS: ${{ secrets.KEY_TORRENTS }}
-      KNOWN_HOSTS_UPLOAD: ${{ secrets.KNOWN_HOSTS_TORRENTS }}
 
 
 #name: Debian package
-##
-## Description
-##
 #
-#on:
-#  workflow_dispatch:
-#  push:
-#    branches:
-#    - main
+# Description
 #
+
+on:
+  workflow_dispatch:
+  push:
+    branches:
+    - main
+
 #jobs:
 #
 #  Debian:
@@ -34,3 +29,9 @@
 #    secrets:
 #      GPG_PRIVATE_KEY: ${{ secrets.GPG_KEY1 }}
 #      PASSPHRASE: ${{ secrets.GPG_PASSPHRASE1 }}
+
+    secrets:
+      GPG_PRIVATE_KEY: ${{ secrets.GPG_KEY1 }}
+      PASSPHRASE: ${{ secrets.GPG_PASSPHRASE1 }}
+      SSH_KEY_TORRENTS: ${{ secrets.KEY_TORRENTS }}
+      KNOWN_HOSTS_UPLOAD: ${{ secrets.KNOWN_HOSTS_TORRENTS }}
