modified:   .github/workflows/ftp-deploy.yml 	modified:   .github/workflows/lint.yml

--- a/.github/workflows/ftp-deploy.yml
+++ b/.github/workflows/ftp-deploy.yml
@@ -1,9 +1,11 @@
 on: push
 name: 🚀 Deploy website on push
+
 jobs:
   web-deploy:
     name: 🎉 Deploy
     runs-on: ubuntu-latest
+    if: ${{ github.repository_owner == 'Tearran' }}
     steps:
     - name: 🚚 Get latest code
       uses: actions/checkout@v3
