--- a/share/doc/armbian-configng/armbian-configng.json
+++ b/share/doc/armbian-configng/armbian-configng.json
@@ -5,7 +5,7 @@
     "Description": "Armbian installer",
     "Options": "none",
     "Category": "system",
-    "Category Description": ""
+    "Category Description": "System and Security"
   },
   {
     "Function Name": "NMTUI",
@@ -13,7 +13,7 @@
     "Description": "Network Manager.",
     "Options": "none",
     "Category": "system",
-    "Category Description": ""
+    "Category Description": "System and Security"
   },
   {
     "Function Name": "Bencharking",
@@ -21,7 +21,7 @@
     "Description": "Armbian Monitor and Bencharking.",
     "Options": "none",
     "Category": "system",
-    "Category Description": ""
+    "Category Description": "System and Security"
   },
   {
     "Function Name": "Timezone",
@@ -29,6 +29,6 @@
     "Description": "Time zone configuration",
     "Options": "none",
     "Category": "locales",
-    "Category Description": ""
+    "Category Description": "Locale Language Region Time Keyboard"
   }
 ]
