added toggle array

--- a/share/armbian-configng/data/armbian-configng.json
+++ b/share/armbian-configng/data/armbian-configng.json
@@ -3,9 +3,10 @@
     "Function Name": "Install",
     "Group Name": "system",
     "Description": "Armbian installer",
-    "Options": "none",
+    "Options": "Why What not-How",
     "Category": "system",
-    "Category Description": "System and Security"
+    "Category Description": "System and Security",
+    "Toggle": "hide"
   },
   {
     "Function Name": "NMTUI",
@@ -13,7 +14,8 @@
     "Description": "Network Manager.",
     "Options": "none",
     "Category": "system",
-    "Category Description": "System and Security"
+    "Category Description": "System and Security",
+    "Toggle": "show"
   },
   {
     "Function Name": "Bencharking",
@@ -21,7 +23,8 @@
     "Description": "Armbian Monitor and Bencharking.",
     "Options": "none",
     "Category": "system",
-    "Category Description": "System and Security"
+    "Category Description": "System and Security",
+    "Toggle": "show"
   },
   {
     "Function Name": "Timezone",
@@ -29,6 +32,7 @@
     "Description": "Time zone configuration",
     "Options": "none",
     "Category": "locales",
-    "Category Description": "Locale Language Region Time Keyboard"
+    "Category Description": "Locale Language Region Time Keyboard",
+    "Toggle": "show"
   }
 ]
