--- a/.github/workflows/ftp-deploy.yml
+++ b/.github/workflows/ftp-deploy.yml
@@ -26,6 +26,6 @@ jobs:
         server: ${{ secrets.SERVER_HOST}}  # replace with your server
         username: ${{ secrets.SERVER_USERNAME }}
         password: ${{ secrets.SERVER_PASSWORD }}     
-        server-dir: / # replace with your server directory
+        server-dir: /../ # replace with your server directory
         local-dir: share/armbian-configng/ # replace with your local directory
     
