--- a/.github/workflows/ftp-deploy.yml
+++ b/.github/workflows/ftp-deploy.yml
@@ -30,5 +30,5 @@ jobs:
         username: ${{ secrets.SERVER_USERNAME }}
         password: ${{ secrets.SERVER_PASSWORD }}     
         server-dir: / # replace with your server directory
-        local-dir: share/armbian-configng/ # replace with your local directory
+        local-dir: share/armbian-configng/web/ # replace with your local directory
     
