--- a/.github/workflows/man-page-deploy.yml
+++ b/.github/workflows/man-page-deploy.yml
@@ -27,3 +27,11 @@ jobs:
           run: |
                 mkdir -p share/man/man1
                 mv share/doc/armbian-configng/*.1 share/man/man1/
+
+        - name: Commit and Push Changes
+          run: |
+                git config --global user.name 'GitHub Actions'
+                git config --global user.email 'github-actions@github.com'
+                git add -A
+                git commit -m "Generated man pages"
+                git push
