fixed typo and updated docs

--- a/lib/armbian-configng/config.ng.jobs.json
+++ b/lib/armbian-configng/config.ng.jobs.json
@@ -193,7 +193,7 @@
                 },
                 {
                     "id": "N04",
-                    "description": "(WIP) Setup Hotspot?Access point",
+                    "description": "(WIP) Setup Hotspot/Access point",
                     "command": [
                         "get_user_continue \"This operation will install necessary software and add configuration files.\nDo you wish to continue?\" process_input",
                         "hotspot_setup"
